Added DB and Swagger configuration

--- a/PlatformService/appsettings.Development.json
+++ b/PlatformService/appsettings.Development.json
@@ -4,5 +4,9 @@
       "Default": "Information",
       "Microsoft.AspNetCore": "Warning"
     }
+  },
+  "ConnectionStrings": {
+    "PlatformsConn": "Server=localhost,1433;Initial Catalog=platformsdb;User ID=sa;Password=password123!;"
+
   }
 }
