--- a/PlatformService/PlatformService.csproj
+++ b/PlatformService/PlatformService.csproj
@@ -25,7 +25,7 @@
     <PackageReference Include="Microsoft.VisualStudio.Azure.Containers.Tools.Targets" Version="1.16.1" />
     <PackageReference Include="Newtonsoft.Json" Version="13.0.1" />
     <PackageReference Include="RabbitMQ.Client" Version="6.4.0" />
-    <PackageReference Include="Swashbuckle.AspNetCore" Version="6.3.2" />
+    <PackageReference Include="Swashbuckle.AspNetCore.Annotations" Version="6.3.2" />
     <PackageReference Include="Swashbuckle.AspNetCore.Swagger" Version="6.3.2" />
     <PackageReference Include="Swashbuckle.AspNetCore.SwaggerUI" Version="6.3.2" />
   </ItemGroup>
