--- a/PlatformService/appsettings.Development.json
+++ b/PlatformService/appsettings.Development.json
@@ -5,6 +5,7 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
+  "CommandService": "http://localhost:6000/api/c/Platforms",
   "ConnectionStrings": {
     "PlatformsConn": "Server=localhost,1433;Initial Catalog=platformsdb;User ID=sa;Password=password123!;"
 
