--- a/PlatformService/appsettings.Development.json
+++ b/PlatformService/appsettings.Development.json
@@ -9,5 +9,7 @@
   "ConnectionStrings": {
     "PlatformsConn": "Server=localhost,1433;Initial Catalog=platformsdb;User ID=sa;Password=password123!;"
 
-  }
+  },
+  "RabbitMQHost": "localhost",
+  "RabbitMQPort": "5672"
 }
