--- a/CommandsService/appsettings.Development.json
+++ b/CommandsService/appsettings.Development.json
@@ -5,6 +5,8 @@
       "Microsoft.AspNetCore": "Warning"
     },
     "RabbitMQHost": "localhost",
-    "RabbitMQPort": "5672"
+    "RabbitMQPort": "5672",
+    "GrpcPlatform": "https://localhost:7229"
+
   }
 }
