--- a/CommandsService/appsettings.Production.json
+++ b/CommandsService/appsettings.Production.json
@@ -1,4 +1,6 @@
 ﻿{
   "RabbitMQHost": "rabbitmq-clusterip-srv",
-  "RabbitMQPort": "5672"
+  "RabbitMQPort": "5672",
+  "GrpcPlatform": "http://platforms-clusterip-srv:666"
+
 }
